kubernetes/microblog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microblog
  labels:
    app: microblog
 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microblog
  strategy:
    type: Recreate
  template:
    metadata:
      labels: 
        app: microblog
    spec:      
      containers:
        -
          livenessProbe:
            httpGet:
              path: /
              port: 5000
          image: kryman/microblog:no-statsd
          name: microblog
          ports:
            - 
              containerPort: 5000
