kubernetes/microblog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: microblog-service
  
spec:
  type: NodePort
  selector:
    app: microblog
  ports:
    -
      name: http
      protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 32000
