kubernetes/mysql-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: "10.111.207.199"
  # type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - 
          image: mysql:5.7
          name: mysql
          ports:
            -
              containerPort: 3306
              name: mysql
          volumeMounts:
            -
              name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        -
          name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
