kubernetes/microblog-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microblog-ingress
spec:
  rules:
    -
      host: microblog.kryman
      http:
        paths:
          -
            path: /
            pathType: Prefix
            backend:
              service:
                name: microblog
                port:
                  name: http
